# itstep

./: .gitignore  README.md
Academy/: hw_Farmanov_12.10.2023.sql  hw_Farmanov_12.12.2023.sql
C++/: C++.sln  C++.vcxproj  C++.vcxproj.filters  ToDo.cpp  ToDo.h  arithmetic.cpp  global_functions.cpp  hw_Farmanov_05.02.cpp  hw_Farmanov_09.02.cpp  hw_Farmanov_14.02(2).cpp  hw_Farmanov_19.02(1).c  hw_Farmanov_19.02(2).c  hw_Farmanov_21.02.c  hw_Farmanov_23.02.c  main.cpp  prac_Farmanov_14.02.cpp  prac_Farmanov_16.02.cpp  prac_Farmanov_28.02.cpp  sea_battle.cpp
Calc/: Calc.sln
OOP/: CMakeLists.txt  OOP.sln  main.cpp  regex.h
OOP_CMake/: CMakeLists.txt  main.cpp
SQL/: insert.sql  script.sql
cstest/: ConsoleApp1.sln
hw/: hw_Farmanov_03.05.2023(2).c  hw_Farmanov_03.07.2023.cpp  hw_Farmanov_03.09.2023.cpp  hw_Farmanov_03.12.2023.cpp  hw_Farmanov_03.14.2023.cpp  hw_Farmanov_03.16.2023.cpp  hw_Farmanov_03.28.2023.cpp  hw_Farmanov_04.02.2023.cpp  hw_Farmanov_12.01.py  hw_Farmanov_12.14.2023.sql  hw_Farmanov_12.17.2023.sql  hw_Farmanov_12.19.2023.sql  hw_Farmanov_14.02(1).cpp  hw_Farmanov_24.11.py  hw_Farmanov_27.11.py
hw/hw_Farmanov_07.13.2023/: CMakeLists.txt  hw_Farmanov_07.13.2023.cpp
hw/hw_Farmanov_07.13.2023/include/: exeptions.hpp  vector.hpp
hw_Farmanov_08.22.2023/: hw_Farmanov_08.22.sln
omdbApi/: omdbApi.sln
prac/: prac_Farmanov_02.19.2023.cpp  prac_Farmanov_02.21.2023.cpp  prac_Farmanov_03.05.2023.c  (+9 more)
prac/prac_Farmanov_07.16.2023/: CMakeLists.txt  prac_Farmanov_07.16.2023.cpp
prac/prac_Farmanov_07.16.2023/include/: authorization.hpp
(+524 files in other folders)
